Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-22983

Mariabackup's --help option disappeared

    XMLWordPrintable

Details

    Description

      Mariabackup's --help option seemed to disappear in MariaDB 10.5.4.

      For example, we can see here that the option existed in MariaDB 10.4.13:

      $ mariadb-backup --version
      mariadb-backup based on MariaDB server 10.4.13-MariaDB debian-linux-gnu (x86_64)
      $ mariadb-backup --help   
      mariadb-backup based on MariaDB server 10.4.13-MariaDB debian-linux-gnu (x86_64)
      Open source backup tool for InnoDB and XtraDB
      ...
      Usage: mariadb-backup [--defaults-file=#] [--backup | --prepare | --copy-back | --move-back] [OPTIONS]
       
      Default options are read from the following files in the given order:
      /etc/my.cnf /etc/mysql/my.cnf ~/.my.cnf 
      The following groups are read: xtrabackup mariabackup mysqld server mysqld-10.4 mariadb mariadb-10.4 client-server galera
      The following options may be given as the first argument:
      --print-defaults          Print the program argument list and exit.
      --no-defaults             Don't read default options from any option file.
      The following specify which files/extra groups are read (specified before remaining options):
      --defaults-file=#         Only read default options from the given file #.
      --defaults-extra-file=#   Read this file after the global files are read.
      --defaults-group-suffix=# Additionally read default groups with # appended as a suffix.
        -V, --verbose       display verbose output
        -v, --version       print xtrabackup version information
      ...
      

      But now in MariaDB 10.5.4, the option is no longer supported:

      $ mariadb-backup --version
      mariadb-backup based on MariaDB server 10.5.4-MariaDB debian-linux-gnu (x86_64)
      $ mariadb-backup --help
      mariadb-backup: unknown option '--help'
      

      Could this be caused by the fix for MDEV-18215?

      Attachments

        Issue Links

          Activity

            People

              vlad.lesin Vladislav Lesin (Inactive)
              GeoffMontee Geoff Montee (Inactive)
              Votes:
              1 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.