MDEV-22983: Mariabackup's --help option disappeared

return --help option